--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
         <title>solid-umbrella</title>
         <meta name="description" content="{{site.description}}">
         <link rel="stylesheet" href="/style.css?v={{site.version}}">
+        <script src="https://kit.fontawesome.com/73bf1ec75c.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <div id="main">
             <div class="container">
                 <div class="center">
+                    <img class="hero-logo" alt="An umbrella anchored in some solid bricks" src="logo.png" />
                     <h1>solid-umbrella</h1>
                     <p class="lead">A CTF team at the Bergen County Academies</p>
+                    <p class="links"><a href="{{site.ctftime}}">CTFTime <i class="far fa-arrow-right"></i></a> <em style="opacity: 0.5;">wiki coming soon!</em></p>
                     <p>What happens when you leave the team name up to GitHub's amazing repository name suggestions? Why, you get <strong>solid-umbrella</strong>, of course!</p>
                     <p>A group of high school friends mucking about, and also occasionally learning more stuff about how computers work (and how to hack them).</p>
-                    <h3 class="members-title">Who we are</h3>
+                    <h5 class="members-title">Who we are</h5>
                     <div class="members">
                         {% for member in site.data.members %}
                         <div class="member">
