--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>solid-umbrella</title>
         <meta name="description" content="{{site.description}}">
         <link rel="stylesheet" href="/style.css?v={{site.version}}">
