Change medium to medium-m

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             {% endif %}
                             
                             {% if member.medium %}
-                            <a href="https://medium.com/@{{member.medium}}" target="_blank"><span class="sr-only">Medium</span><i class="fab fa-medium"></i></a>
+                            <a href="https://medium.com/@{{member.medium}}" target="_blank"><span class="sr-only">Medium</span><i class="fab fa-medium-m"></i></a>
                             {% endif %}
                         </div>
                         {% endfor %}
