Attempt to improve SEO

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>solid-umbrella</title>
+        <title>solid-umbrella ctf team</title>
         <meta name="description" content="{{site.description}}">
         <link rel="stylesheet" href="/style.css?v={{site.version}}">
         <link rel="shortcut icon" href="/favicon.ico">
@@ -18,7 +18,7 @@
                 <div class="center">
                     <img class="hero-logo" alt="An umbrella anchored in some solid bricks" src="logo.png" />
                     <h1>solid-umbrella</h1>
-                    <p class="lead">A CTF team at the Bergen County Academies</p>
+                    <h2 class="lead">A CTF team at the Bergen County Academies</h2>
                     <p class="links">
                         <a href="{{site.github}}">GitHub <i class="far fa-arrow-right"></i></a>
                         <a href="{{site.ctftime}}">CTFTime <i class="far fa-arrow-right"></i></a>
