--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <a href="{{site.ctftime}}">CTFTime <i class="far fa-arrow-right"></i></a>
                     </p>
                     <p>What happens when you leave the team name up to GitHub's amazing repository name suggestions? Why, you get <strong>solid-umbrella</strong>, of course!</p>
-                    <p>A group of high school friends mucking about, and also occasionally learning more stuff about how computers work (and how to hack them).</p>
+                    <p>A group of friends mucking about, and also occasionally learning more stuff about how computers work (and how to hack them).</p>
                     <h5 class="section-title">Who we are</h5>
                     <div class="members">
                         {% for member in site.data.members %}
